--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest --coverage",
     "start": "http-server dist",
+    "start:dev": "webpack-dev-server",
     "build": "webpack --mode production",
     "lint": "eslint ."
   },
@@ -39,7 +40,8 @@
     "mini-css-extract-plugin": "^0.9.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
     "core-js": "^3.6.4"
