--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "http-server": "^0.12.1",
     "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "regenerator-runtime": "^0.13.5",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
