--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,15 @@
         "sourceType": "module"
     },
     "rules": {
+        "class-methods-use-this": "off",
+        "no-console": "off",
+        "no-alert": "off",
+        "consistent-return" : "off",
+        "no-restricted-syntax": [
+            "error",
+            "WithStatement",
+            "BinaryExpression[operator='in']"
+        ],
         "import/extensions":[
             "error","ignorePackages"
         ]
