--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0",
+    "file-loader": "^6.0.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.12.1",
+    "image-webpack-loader": "^6.0.0",
     "jest": "^24.9.0",
-    "mini-css-extract-plugin": "^0.9.0",
     "regenerator-runtime": "^0.13.5",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
@@ -45,6 +45,11 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
-    "core-js": "^3.6.4"
+    "core-js": "^3.6.4",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "terser-webpack-plugin": "^3.0.1",
+    "webpack-merge": "^4.2.2"
   }
 }
