--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,7 +10,7 @@ init:
   - ps: Install-Product node 10
 
 install:
-  - npm  # команда установки зависимостей
+  - npm install  # команда установки зависимостей
 
 build: off
 
@@ -18,7 +18,7 @@ build_script:
   - npm run build  # команда сборки
 
 test_script:
-  - npm run lint && npm test  # скрипт тестирования
+  - npm run lint && npm run test  # скрипт тестирования
 
 deploy_script:  # скрипт развертывания
   - git config --global credential.helper store
